<resources>
    <string name="app_name">My Player</string>
    <string name="top_genre_category_label">Top genres</string>
    <string name="top_artist_category_label">Top artists</string>
    <string name="top_album_category_label">Top albums</string>
    <string name="top_song_category_label">Top songs</string>
    <string name="see_all_category_label">See all</string>
    <string name="song">song</string>
    <string name="album">album</string>
    <string name="tools_artist_name">Artist Name</string>
    <string name="tools_album_title">Album Title</string>
    <string name="tools_song_title">Song Title</string>
    <string name="tools_player_song_title">Current Song Title</string>
    <string name="tools_player_artist_name">Current Artist</string>
    <string name="select_a_song">Select a song to play</string>
    <string name="genres_label">Genres</string>
    <string name="artists_label">Artists</string>
    <string name="songs_label">Songs</string>
    <string name="albums_label">Albums</string>
    <string name="all_artists">All Artists</string>
    <string name="all_genres">All Genres</string>
    <string name="all_songs">All Songs</string>
    <string name="all_albums">All Albums</string>
    <string name="_albums">" Albums"</string>
    <string name="toast_choose_song">Choose a song to play</string>
</resources>
