<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/space_S"
    android:background="@color/bg_color"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/album_image"
        style="@style/list_album_image"
        tools:src="@drawable/album_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginRight="80dp"
        android:layout_toRightOf="@id/album_image"
        android:orientation="vertical">

        <TextView
            android:id="@+id/album_title"
            style="@style/Main_1st_row"
            android:layout_marginTop="@dimen/space_0"
            tools:text="@string/tools_album_title" />

        <TextView
            android:id="@+id/artist_name"
            style="@style/Main_2nd_row"
            android:layout_marginBottom="@dimen/space_0"
            tools:text="@string/tools_artist_name" />

        <TextView
            android:id="@+id/album_count"
            style="@style/Main_2nd_row"
            android:layout_marginBottom="@dimen/space_0"
            tools:text="@string/song" />

    </LinearLayout>

    <ImageView
        android:id="@+id/list_play_button"
        style="@style/list_play_button"
        android:src="@drawable/play_button_common" />

</RelativeLayout>