<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Background"
    tools:context="com.example.android.musicalstructure.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="62dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Category_label"
                    android:text="@string/top_genre_category_label" />

                <TextView
                    android:id="@+id/see_all_genres"
                    style="@style/Category_see_all_label"
                    android:text="@string/see_all_category_label" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    style="@style/Horizontal_layout"
                    android:layout_marginBottom="@dimen/space_S">

                    <ImageView
                        android:id="@+id/genre_icon_1"
                        style="@style/Category_item"
                        tools:src="@drawable/genre_icon" />

                    <ImageView
                        android:id="@+id/genre_icon_2"
                        style="@style/Category_item"
                        tools:src="@drawable/genre_icon" />

                    <ImageView
                        android:id="@+id/genre_icon_3"
                        style="@style/Category_item"
                        tools:src="@drawable/genre_icon" />

                    <ImageView
                        android:id="@+id/genre_icon_4"
                        style="@style/Category_item"
                        tools:src="@drawable/genre_icon" />

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Category_label"
                    android:text="@string/top_artist_category_label" />

                <TextView
                    android:id="@+id/see_all_artists"
                    style="@style/Category_see_all_label"
                    android:text="@string/see_all_category_label" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout style="@style/Horizontal_layout">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/artist_image_1"
                            style="@style/Category_item"
                            android:src="@drawable/artist_5" />

                        <TextView
                            android:id="@+id/artist_name_1"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_artist_name" />

                        <TextView
                            android:id="@+id/album_count_1"
                            style="@style/Main_2nd_row"
                            tools:text="@string/album" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/artist_image_2"
                            style="@style/Category_item"
                            android:src="@drawable/artist_8" />

                        <TextView
                            android:id="@+id/artist_name_2"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_artist_name" />

                        <TextView
                            android:id="@+id/album_count_2"
                            style="@style/Main_2nd_row"
                            tools:text="@string/album" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/artist_image_3"
                            style="@style/Category_item"
                            android:src="@drawable/artist_4" />

                        <TextView
                            android:id="@+id/artist_name_3"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_artist_name" />

                        <TextView
                            android:id="@+id/album_count_3"
                            style="@style/Main_2nd_row"
                            tools:text="@string/album" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/artist_image_4"
                            style="@style/Category_item"
                            android:src="@drawable/artist_image" />

                        <TextView
                            android:id="@+id/artist_name_4"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_artist_name" />

                        <TextView
                            android:id="@+id/album_count_4"
                            style="@style/Main_2nd_row"
                            tools:text="@string/album" />

                    </LinearLayout>

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    style="@style/Category_label"
                    android:text="@string/top_album_category_label" />

                <TextView
                    android:id="@+id/see_all_albums"
                    style="@style/Category_see_all_label"
                    android:text="@string/see_all_category_label" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout style="@style/Horizontal_layout">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/album_cover_1"
                            style="@style/Category_item"
                            android:src="@drawable/cover_9" />

                        <TextView
                            android:id="@+id/album_title_1"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_album_title" />

                        <TextView
                            android:id="@+id/album_artist_1"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/album_cover_2"
                            style="@style/Category_item"
                            android:src="@drawable/cover_0" />

                        <TextView
                            android:id="@+id/album_title_2"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_album_title" />

                        <TextView
                            android:id="@+id/album_artist_2"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/album_cover_3"
                            style="@style/Category_item"
                            android:src="@drawable/cover_7" />

                        <TextView
                            android:id="@+id/album_title_3"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_album_title" />

                        <TextView
                            android:id="@+id/album_artist_3"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/album_cover_4"
                            style="@style/Category_item"
                            android:src="@drawable/album_image" />

                        <TextView
                            android:id="@+id/album_title_4"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_album_title" />

                        <TextView
                            android:id="@+id/album_artist_4"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Category_label"
                    android:text="@string/top_song_category_label" />

                <TextView
                    android:id="@+id/see_all_songs"
                    style="@style/Category_see_all_label"
                    android:text="@string/see_all_category_label" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    style="@style/Horizontal_layout"
                    android:layout_marginBottom="@dimen/space_S">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/song_image_1"
                            style="@style/Category_item"
                            android:src="@drawable/song_image" />

                        <TextView
                            android:id="@+id/song_title_1"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_song_title" />

                        <TextView
                            android:id="@+id/song_artist_1"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/song_image_2"
                            style="@style/Category_item"
                            android:src="@drawable/song_image" />

                        <TextView
                            android:id="@+id/song_title_2"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_song_title" />

                        <TextView
                            android:id="@+id/song_artist_2"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/song_image_3"
                            style="@style/Category_item"
                            android:src="@drawable/song_image" />

                        <TextView
                            android:id="@+id/song_title_3"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_song_title" />

                        <TextView
                            android:id="@+id/song_artist_3"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/song_image_4"
                            style="@style/Category_item"
                            android:src="@drawable/song_image" />

                        <TextView
                            android:id="@+id/song_title_4"
                            style="@style/Main_1st_row"
                            tools:text="@string/tools_song_title" />

                        <TextView
                            android:id="@+id/song_artist_4"
                            style="@style/Main_2nd_row"
                            tools:text="@string/tools_artist_name" />

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottom_player"
        style="@style/Bottom_player">

        <View style="@style/Seekbar_bg" />

        <View style="@style/Seekbar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player_song_title"
                style="@style/Player_song_title"
                android:text="@string/select_a_song"
                tools:text="@string/tools_player_song_title" />

            <TextView
                android:id="@+id/player_artist"
                style="@style/Player_artist"
                android:text=""
                tools:text="@string/tools_player_artist_name" />

        </LinearLayout>

        <ImageView
            android:id="@+id/button_player_play"
            style="@style/Bottom_play_button"
            android:src="@drawable/play_button"
            android:tag="R.drawable.play_button"/>

    </RelativeLayout>

</RelativeLayout>
